configurando el tema del aplicativo

--- a/src/styles/themes/themes.scss
+++ b/src/styles/themes/themes.scss
@@ -2,6 +2,8 @@
     --primary: #1242f4;
     --black: #000;
     --white: #fff;
+    --backGroundInput: #e3eaf3;
+    --backgroundPage: #fff;
 }
 
 
