--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,1 +1,16 @@
 @import './themes/themes.scss';
+
+.logo{
+    /* font-size: 23px; */
+    font-size: 1.1rem;
+    color: rgb(29, 116, 248);
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.link{
+    color: var(--primary);
+    &:active{
+        color: darken(#1242f4, 30);
+    }
+}
